--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=Chat Name Colors
 author=BeagleBreath
 support=baglebreath@gmail.com
 description=Differentiate players in your chat with custom colors!
-tags=chat name color message
+tags=chat,name,color,message
 plugins=com.beaglebreath.ChatNameColorsPlugin
