Fix support uri
Thought it was an email for some reason, its actually a URI

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Chat Name Colors
 author=BeagleBreath
-support=baglebreath@gmail.com
+support=
 description=Differentiate players in your chat with custom colors!
 tags=chat,name,color,message
 plugins=com.beaglebreath.ChatNameColorsPlugin
